# GClaw

./: LICENSE  README.md  SKILL.md  _meta.json  pyproject.toml
.clawhub/: origin.json
references/: original-readme.md
src/kaimail/: __init__.py  bot_context.py  classifier.py  client.py  fetcher.py  models.py  parser.py  store.py
src/kaimail.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_bot_context.py  test_classifier.py  test_client.py  test_oracle.py  test_parser.py  test_store.py
